Fix z-index issue

--- a/ashes/src/components/header/header.css
+++ b/ashes/src/components/header/header.css
@@ -14,7 +14,7 @@
   position: fixed;
   top: 0;
   right: 0;
-  z-index: 9999;
+  z-index: 2;
   width: 100%;
   height: 60px;
   color: #9ba3a7;
