--- a/ashes/src/less/layout/_site.less
+++ b/ashes/src/less/layout/_site.less
@@ -1,6 +1,7 @@
 @sidebar-width: 74px;
 
 .fc-admin {
+  z-index: 1;
   display: flex;
   min-height: 100vh;
   .fc-sidebar {
@@ -20,6 +21,7 @@
       flex-direction: column;
       border-top: 1px solid @color-header-border;
       margin-top: 60px;
+      z-index: 1;
 
       > * {
         flex: 1;
